fix(desktop): don't shift sections on macOS if window is small (#1235)

--- a/packages/desktop/app/stylesheets/renderer.css
+++ b/packages/desktop/app/stylesheets/renderer.css
@@ -9,12 +9,14 @@
   transition: 0.15s padding ease;
 }
 
-.mac-desktop #app.collapsed-notes.collapsed-navigation #editor-column {
-  padding-top: 18px;
-}
+@media screen and (min-width: 768px) {
+  .mac-desktop #app.collapsed-notes.collapsed-navigation #editor-column {
+    padding-top: 18px;
+  }
 
-.mac-desktop #app.collapsed-navigation #items-column {
-  padding-top: 18px;
+  .mac-desktop #app.collapsed-navigation #items-column {
+    padding-top: 18px;
+  }
 }
 
 panel-resizer {
